--- a/_posts/2021-01-25-banana.md
+++ b/_posts/2021-01-25-banana.md
@@ -8,7 +8,7 @@ date: 2021-01-25
 permalink: /banana
 tags: fruit tropical staple
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/banana
+media_subpath: /assets/posts/banana
 image:
   path: wc:Banana_Maria_Sibylla_Merian_1705_plate_XII.png
 layout: juncture
