--- a/_posts/2021-01-25-turmeric.md
+++ b/_posts/2021-01-25-turmeric.md
@@ -9,7 +9,7 @@ date: 2021-01-25
 permalink: /turmeric
 tags: root spice medicinal tropical
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/turmeric
+media_subpath: /assets/posts/turmeric
 image:
   path: https://images.nypl.org/index.php?id=1126115&t=w
 layout: juncture
