--- a/_posts/2021-03-03-boxwood.md
+++ b/_posts/2021-03-03-boxwood.md
@@ -9,7 +9,7 @@ date: 2021-03-03
 permalink: /boxwood
 tags: shrub ornamental temperate
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/boxwood
+media_subpath: /assets/posts/boxwood
 image:
   path: wc:Gewöhnlicher_Buchsbaum,_Buxus_sempervirens_.JPG
 layout: juncture
