--- a/_posts/2021-03-03-cacao.md
+++ b/_posts/2021-03-03-cacao.md
@@ -9,7 +9,7 @@ date: 2021-03-03
 permalink: /cacao
 tags: fruit beverage tropical stimulant
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/cacao
+media_subpath: /assets/posts/cacao
 image:
   path: cacao-banner.jpg
 layout: juncture
