--- a/_posts/2021-03-03-cinnamon.md
+++ b/_posts/2021-03-03-cinnamon.md
@@ -9,7 +9,7 @@ date: 2021-03-03
 permalink: /cinnamon
 tags: spice medicinal tropical
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/cinnamon
+media_subpath: /assets/posts/cinnamon
 image:
   path: banner.jpg
 layout: juncture
