--- a/_posts/2022-05-27-maize.md
+++ b/_posts/2022-05-27-maize.md
@@ -10,7 +10,7 @@ date: 2022-05-27
 permalink: /maize
 tags: grain staple temperate
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/maize
+media_subpath: /assets/posts/maize
 image:
   path: banner_Baumann_Hopi_Corn_Indianapolis_Museum_of_Art_In_Copyright_Bridgeman_Images.jpg
 layout: juncture
