--- a/_posts/2024-02-14-katsura.md
+++ b/_posts/2024-02-14-katsura.md
@@ -10,7 +10,7 @@ date: 2024-02-14
 permalink: /katsura
 tags: tree ornamental temperate cold-hardy
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/katsura
+media_subpath: /assets/posts/katsura
 image:
   path: wc:Katsura_Tree_Cercidiphyllum_japonicum_Trunk_Bark_2000px.jpg
 layout: juncture
