--- a/_posts/2025-02-04-tamarack.md
+++ b/_posts/2025-02-04-tamarack.md
@@ -11,7 +11,7 @@ permalink: /tamarack
 tags: tree conifer wetland cold-hardy
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/tamarack
+media_subpath: /assets/posts/tamarack
 image:
   path: wc:Crowns_of_Siberian_larch_in_winter.jpg
 layout: juncture
