--- a/_posts/2025-08-05-gulmohar.md
+++ b/_posts/2025-08-05-gulmohar.md
@@ -9,7 +9,7 @@ permalink: /gulmohar
 tags: flower ornamental subtropical tree tropical
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/gulmohar
+media_subpath: /assets/posts/gulmohar
 image:
   path: CurtisGulmohar.jpg
 layout: juncture
