--- a/_posts/2025-08-07-jasmine.md
+++ b/_posts/2025-08-07-jasmine.md
@@ -12,7 +12,7 @@ permalink: /jasmine
 tags: flower medicinal ornamental shrub subtropical tropical
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/jasmine
+media_subpath: /assets/posts/jasmine
 image:
   path: wc:Jasminum_polyanthum_kz01.jpg
 layout: juncture
