--- a/_posts/2025-08-07-mulberry.md
+++ b/_posts/2025-08-07-mulberry.md
@@ -11,7 +11,7 @@ permalink: /mulberry
 tags: fiber fruit ornamental temperate tree
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/mulberry
+media_subpath: /assets/posts/mulberry
 image:
   path: wc:Singing_games_-_The_Mulberry_Bush.jpg
 layout: juncture
