--- a/_posts/2025-08-07-potato.md
+++ b/_posts/2025-08-07-potato.md
@@ -16,7 +16,7 @@ permalink: /potato
 tags: cold-hardy high-altitude root staple temperate vegetable
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/potato
+media_subpath: /assets/posts/potato
 image:
   path: wc:Patates.jpg
 layout: juncture
