--- a/_posts/2025-09-29-coffee.md
+++ b/_posts/2025-09-29-coffee.md
@@ -11,7 +11,7 @@ permalink: /coffee
 tags: beverage stimulant tropical high-altitude shrub tree
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/coffee
+media_subpath: /assets/posts/coffee
 image:
   path: wc:Coffee_berries_in_Hacienda_Guayabal%2C_Colombia.jpg
 layout: juncture
