--- a/_posts/2021-01-06-agave.md
+++ b/_posts/2021-01-06-agave.md
@@ -9,7 +9,7 @@ date: 2021-01-06
 permalink: /agave
 tags: succulent desert fiber beverage
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/agave
+media_subpath: /assets/posts/agave
 image:
   path: wc:Gc29_agave_americana.jpg
 layout: juncture
