--- a/_posts/2021-05-24-peony.md
+++ b/_posts/2021-05-24-peony.md
@@ -9,7 +9,7 @@ date: 2021-05-24
 permalink: /peony
 tags: flower ornamental temperate
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/peony
+media_subpath: /assets/posts/peony
 image:
   path: wc:Smith_-_Chinese_Tree_Peony_(Paeonia_suffruticosa)_-_1939.288_-_Cleveland_Museum_of_Art.jpg
 layout: juncture
