--- a/_posts/2022-04-04-tamarind.md
+++ b/_posts/2022-04-04-tamarind.md
@@ -9,7 +9,7 @@ date: 2022-04-04
 permalink: /tamarind
 tags: fruit tropical condiment
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/tamarind
+media_subpath: /assets/posts/tamarind
 image:
   path: wc:Tamarindus_indica03.JPG
 layout: juncture
