--- a/_posts/2022-05-17-peanut.md
+++ b/_posts/2022-05-17-peanut.md
@@ -9,7 +9,7 @@ date: 2022-05-17
 permalink: /peanut
 tags: legume nut oilseed nitrogen-fixer
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/peanut
+media_subpath: /assets/posts/peanut
 image:
   path: wc:A_Peanut_Plant,_illustration_from_The_Encyclopedia_of_Food_by_Artemas_Ward_01.jpg
 layout: juncture
