--- a/_posts/2023-10-28-eggplant.md
+++ b/_posts/2023-10-28-eggplant.md
@@ -9,7 +9,7 @@ date: 2023-10-28
 permalink: /eggplant
 tags: vegetable tropical
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/eggplant
+media_subpath: /assets/posts/eggplant
 image:
   path: Seikei_Zusetsu_cover.jpg
 layout: juncture
