--- a/_posts/2024-07-01-quinoa.md
+++ b/_posts/2024-07-01-quinoa.md
@@ -10,7 +10,7 @@ date: 2024-07-01
 permalink: /quinoa
 tags: grain high-altitude staple gluten-free
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/quinoa
+media_subpath: /assets/posts/quinoa
 image:
   path: wc:White%2C_red%2C_and_black_quinoa.jpg
 layout: juncture
