--- a/_posts/2024-07-11-soybean.md
+++ b/_posts/2024-07-11-soybean.md
@@ -10,7 +10,7 @@ thumbnail: soybean.png
 permalink: /soybean
 tags: legume grain oilseed nitrogen-fixer
 published: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/soybean
+media_subpath: /assets/posts/soybean
 image:
   path: wc:Glycine_max_15-p.bot-glyci.max-033.jpg
 layout: juncture
