--- a/_posts/2025-11-25-wild-rice.md
+++ b/_posts/2025-11-25-wild-rice.md
@@ -10,7 +10,7 @@ permalink: /wild-rice
 tags: grain staple gluten-free wetland temperate medicinal
 published: true
 featured: true
-media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/posts/wild-rice
+media_subpath: /assets/posts/wild-rice
 image:
   path: wc:Zizania_palustris_(20150206966).jpg
 layout: juncture
